--- a/Passtimes/Passtimes/Feed.storyboard
+++ b/Passtimes/Passtimes/Feed.storyboard
@@ -50,21 +50,21 @@
                                 <color key="textColor" red="0.1333333333" green="0.12941176469999999" blue="0.14901960780000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="qb5-s9-DBt">
-                                <rect key="frame" x="10" y="68" width="355" height="110"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="qb5-s9-DBt">
+                                <rect key="frame" x="0.0" y="62" width="375" height="122"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="110" id="lWg-gG-PCZ"/>
+                                    <constraint firstAttribute="height" constant="122" id="lWg-gG-PCZ"/>
                                 </constraints>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="IJp-BT-mbr">
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="IJp-BT-mbr">
                                     <size key="itemSize" width="50" height="50"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                    <inset key="sectionInset" minX="16" minY="11" maxX="16" maxY="11"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="YJC-Di-FNb">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cellIdentifier" id="YJC-Di-FNb">
+                                        <rect key="frame" x="16" y="36" width="50" height="50"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                             <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
@@ -76,14 +76,14 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="qb5-s9-DBt" firstAttribute="leading" secondItem="JXT-PB-QSq" secondAttribute="leading" id="88v-sn-NnE"/>
-                            <constraint firstItem="1wd-dI-Tbr" firstAttribute="top" secondItem="qb5-s9-DBt" secondAttribute="bottom" constant="16" id="BqD-bg-Bmf"/>
+                            <constraint firstItem="qb5-s9-DBt" firstAttribute="leading" secondItem="9TM-US-UEG" secondAttribute="leading" id="4hb-TF-u5n"/>
+                            <constraint firstItem="1wd-dI-Tbr" firstAttribute="top" secondItem="qb5-s9-DBt" secondAttribute="bottom" constant="10" id="BqD-bg-Bmf"/>
                             <constraint firstItem="JXT-PB-QSq" firstAttribute="top" secondItem="1wd-dI-Tbr" secondAttribute="bottom" constant="10" id="EEV-1G-trT"/>
-                            <constraint firstItem="qb5-s9-DBt" firstAttribute="top" secondItem="1w1-4z-Cds" secondAttribute="bottom" constant="16" id="I5U-HV-1uL"/>
+                            <constraint firstItem="qb5-s9-DBt" firstAttribute="top" secondItem="1w1-4z-Cds" secondAttribute="bottom" constant="10" id="I5U-HV-1uL"/>
                             <constraint firstItem="1wd-dI-Tbr" firstAttribute="leading" secondItem="1w1-4z-Cds" secondAttribute="leading" id="LH5-ed-RzI"/>
                             <constraint firstItem="1w1-4z-Cds" firstAttribute="leading" secondItem="9TM-US-UEG" secondAttribute="leading" constant="16" id="P69-XK-r2n"/>
-                            <constraint firstItem="qb5-s9-DBt" firstAttribute="trailing" secondItem="JXT-PB-QSq" secondAttribute="trailing" id="QXG-3z-c1g"/>
                             <constraint firstItem="JXT-PB-QSq" firstAttribute="leading" secondItem="9TM-US-UEG" secondAttribute="leading" constant="10" id="QeF-5e-46e"/>
+                            <constraint firstItem="9TM-US-UEG" firstAttribute="trailing" secondItem="qb5-s9-DBt" secondAttribute="trailing" id="Thb-GT-drd"/>
                             <constraint firstItem="1wd-dI-Tbr" firstAttribute="trailing" secondItem="1w1-4z-Cds" secondAttribute="trailing" id="X9R-eb-CgD"/>
                             <constraint firstItem="9TM-US-UEG" firstAttribute="trailing" secondItem="1w1-4z-Cds" secondAttribute="trailing" constant="16" id="Xoh-Ih-xXK"/>
                             <constraint firstItem="9TM-US-UEG" firstAttribute="bottom" secondItem="JXT-PB-QSq" secondAttribute="bottom" id="h3k-6l-KSj"/>
@@ -101,6 +101,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="attendingCollection" destination="qb5-s9-DBt" id="ocv-od-UHx"/>
                         <outlet property="onGoingCollection" destination="JXT-PB-QSq" id="co6-5z-6Yu"/>
                         <segue destination="UQP-7s-t3f" kind="showDetail" identifier="toDetailView" id="nho-gX-bIh"/>
                         <segue destination="vhj-kR-A3V" kind="showDetail" identifier="toCreateView" id="XlQ-34-SHc"/>
