--- a/Passtimes/Passtimes/Profile.storyboard
+++ b/Passtimes/Passtimes/Profile.storyboard
@@ -29,11 +29,17 @@
                                             <constraint firstAttribute="height" constant="24" id="l3A-nd-LWO"/>
                                             <constraint firstAttribute="width" constant="24" id="nzO-ab-LnX"/>
                                         </constraints>
-                                        <state key="normal" image="ic_settings"/>
+                                        <state key="normal" image="ic_logout"/>
+                                        <connections>
+                                            <action selector="logout:" destination="zMb-9W-YHX" eventType="touchUpInside" id="q4O-UT-423"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Kc-uO-wqn">
                                         <rect key="frame" x="295" y="10" width="24" height="24"/>
                                         <state key="normal" image="ic_edit"/>
+                                        <connections>
+                                            <action selector="editProfile:" destination="zMb-9W-YHX" eventType="touchUpInside" id="wgn-Wf-xK0"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -125,12 +131,12 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OvC-xV-zqg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1108" y="170.46476761619192"/>
+            <point key="canvasLocation" x="1146" y="170"/>
         </scene>
     </scenes>
     <resources>
         <image name="head_oval" width="512" height="270"/>
         <image name="ic_edit" width="16" height="16"/>
-        <image name="ic_settings" width="20" height="20"/>
+        <image name="ic_logout" width="18" height="18"/>
     </resources>
 </document>
